--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>Par&aacute;bolas</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<script src="phonegap.js"></script>
+		<!--<script src="phonegap.js"></script>-->
 		<script type="text/javascript" src="js/jquery-2.0.2.min.js"></script>
 		<script type="text/javascript" src="app.js"></script>
 		<link rel="stylesheet" type="text/css" href="font-awesome/font-awesome.min.css" />
@@ -24,7 +24,6 @@
 				</tr>
 			</table>
 		</div>
-		<div id="content" class="cf"></div>
 		<div id="menu" class="cf">
 			<table>
 				<tr>
@@ -35,5 +34,6 @@
 				</tr>
 			</table>			
 		</div>
+		<div id="content" class="cf"></div>
 	</body>
 </html>
