--- a/pages/ayudanos.html
+++ b/pages/ayudanos.html
@@ -1,12 +1,12 @@
 <div id="email" class="cf">
 	<h3>Oraci&oacute;n</h3>
-	<p>Esta aplicaci&oacute;n la hacemos para la gloria de Dios y para la expansi&oacute;n del Reino. Si deseas ayudar a nuestro ministerio puedes hacerlo mediante la oraci&oacute;n: Ora para que podamos tener direcci&oacute;n, sabidur&iacute;a, tiempo y tambi&eacute;n los recursos necesarios para continuar nuestros desarrollos de aplicaciones completamente gratuitas.
-	<h3>Facebook</h3>
-	<p>Si te gusta nuestra aplicaci&oacute;n ay&uacute;danos haciendo like a nuestra <a href="https://www.facebook.com/siervofiel.org" target="_blank">pagina en Facebook</a>, as&iacute; m&aacute;s personas podr&aacute;n conocer nuestro ministerio.</p>
+	<p>Ora para que podamos tener direcci&oacute;n, sabidur&iacute;a, tiempo y tambi&eacute;n los recursos necesarios para continuar nuestros desarrollos de aplicaciones completamente gratuitas.
 	<h3>Ofrendas</h3>
-	<p>Esta y otras aplicaciones son completamente gratuitas y libres de publicidad. Si Dios ha tocado tu coraz&oacute;n y deseas ayudarnos, puedes hacerlo con una ofrenda voluntaria mediante nuestra cuenta paypal:</p>
+	<p>Deseamos hacer m&aacute;s aplicaciones gratuitas y sin publicidad, pero necesitamos sustento. Si Dios te ha tocado con esta aplicaci&oacute;n, quiz&aacute;s puedas hacernos una ofrenda mediante nuestra cuenta paypal. Ser&aacute; de gran bendici&oacute;n para nosotros:</p>
 	<p style="text-align:center;">
 		<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=NXF4TSDL8AEL4" target="_blank"><img src="img/donate.gif" /></a>
 	</p>
+	<h3>Facebook</h3>
+	<p>Si te gusta nuestra aplicaci&oacute;n ay&uacute;danos haciendo like a nuestra <a href="https://www.facebook.com/siervofiel.org" target="_blank">pagina en Facebook</a>, as&iacute; m&aacute;s personas podr&aacute;n conocer nuestro ministerio.</p>
 	<br/>
 </div>
