--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -1,11 +1,11 @@
 <div id="about" class="cf">
 	<h2>Autor</h2>
 	<h3>Ministerio Siervo Fiel</h3>
-	<p>&Eacute;sta aplicaci&oacute;n ha sido desarrollada por el Ministerio Siervo Fiel <a href="http://www.siervofiel.org" target="_blank">www.siervofiel.org</a>. </p>
-	<p>Nuestro ministerio ofrece ayuda y recursos digitales para siervos de Dios que quieren expandir el evangelio por medios digitales.</p>
+	<p>&Eacute;sta aplicaci&oacute;n ha sido desarrollada por el Ministerio Siervo Fiel <a href="http://www.siervofiel.org/?utm_source=android&utm_medium=app-parabolas&utm_campaign=informacion" target="_blank">www.siervofiel.org</a>. </p>
+	<p>Ofrece servicios digitales para siervos de Dios que quieren expandir el evangelio en las redes. Si necesitas desarrollo web, desarrollo de aplicaciones m&oacute;viles, hosting u otros servicios, no dudes en ingresar a nuestra pagina <a href="http://www.siervofiel.org/?utm_source=android&utm_medium=app-parabolas&utm_campaign=servicios" target="_blank">www.siervofiel.org</a>.</p>
 	<h3>Contacto</h3>
 	<p>&iquest;Quieres enviarnos alg&uacute;n comentario, duda o reportar alg&uacute;n error?</p>
-	<p>Escr&iacute;benos a <a href="mailto:info@siervofiel.org" target="_blank">info@siervofiel.org</a></p>
+	<p>Escr&iacute;benos a <a href="mailto:android@siervofiel.org" data-rel='external'>android@siervofiel.org</a></p>
 	<br/>
 	<h2>Cr&eacute;ditos</h2>
 	<h3>Inspiraci&oacute;n</h3>
